--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="YarnSpinner" Version="1.1.0" />
     <PackageReference Include="YarnSpinner.Compiler" Version="1.1.0" />
     <PackageReference Include="CsvHelper" Version="12.2.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
