Update ysc to Yarn Spinner 2.0 beta 5

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/ysc.csproj",
+                "${workspaceFolder}/src/YarnSpinner.Console/ysc.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
