--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.0</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>YarnSpinnerConsole</RootNamespace>
     <UseAppHost>true</UseAppHost>
     <PublishSelfContained>true</PublishSelfContained>
@@ -11,8 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20253.1" />
-    <PackageReference Include="YarnSpinner" Version="1.1.0" />
-    <PackageReference Include="YarnSpinner.Compiler" Version="1.1.0" />
+    <!-- <PackageReference Include="YarnSpinner" Version="1.1.0" />
+    <PackageReference Include="YarnSpinner.Compiler" Version="1.1.0" /> -->
+    <ProjectReference Include="..\..\..\YarnSpinner\YarnSpinner\YarnSpinner.csproj" />
+    <ProjectReference Include="..\..\..\YarnSpinner\YarnSpinner.Compiler\YarnSpinner.Compiler.csproj" />
     <PackageReference Include="CsvHelper" Version="12.2.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
