--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
       name: Upload Windows build
       with:
         name: ysc-win-${{ github.sha }}
-        path: YarnSpinner-Console/src/YarnSpinner.Console/bin/Release/netcoreapp3.1/win-x64/publish/ysc.exe
+        path: src/YarnSpinner.Console/bin/Release/netcoreapp3.1/win-x64/publish/ysc.exe
     
     - name: Package for macOS
       run: dotnet publish -r osx-x64 -c Release --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=True
@@ -67,5 +67,5 @@ jobs:
       name: Upload macOS build
       with:
         name: ysc-osx-${{ github.sha }}
-        path: YarnSpinner-Console/src/YarnSpinner.Console/bin/Release/netcoreapp3.1/osx-x64/publish/ysc
+        path: src/YarnSpinner.Console/bin/Release/netcoreapp3.1/osx-x64/publish/ysc
 
