Include refname in built artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       name: Upload Windows build
       with:
-        name: ysc-win-${{ github.sha }}
+        name: ysc-win-${{ github.refname }}-${{ github.sha }}
         path: src/YarnSpinner.Console/bin/Release/netcoreapp3.1/win-x64/publish/ysc.exe
     
     - name: Package for macOS
@@ -66,6 +66,6 @@ jobs:
     - uses: actions/upload-artifact@v2
       name: Upload macOS build
       with:
-        name: ysc-osx-${{ github.sha }}
+        name: ysc-win-${{ github.refname }}-${{ github.sha }}
         path: src/YarnSpinner.Console/bin/Release/netcoreapp3.1/osx-x64/publish/ysc
 
