--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,15 +58,79 @@ jobs:
     - uses: actions/upload-artifact@v2
       name: Upload Windows build
       with:
-        name: ysc-win-${{ steps.gitversion.outputs.fullSemVer }}-${{ steps.gitversion.outputs.shortSha }}
+        name: ysc-win
         path: src/YarnSpinner.Console/bin/Release/netcoreapp3.1/win-x64/publish/ysc.exe
     
     - name: Package for macOS
-      run: dotnet publish -r osx-x64 -c Release --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=True
+      run: |
+        dotnet publish -r osx-x64 -c Release --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=True
+        tar -cvf ysc-osx.tar src/YarnSpinner.Console/bin/Release/netcoreapp3.1/osx-x64/publish/
       
     - uses: actions/upload-artifact@v2
       name: Upload macOS build
       with:
-        name: ysc-osx-${{ steps.gitversion.outputs.fullSemVer }}-${{ steps.gitversion.outputs.shortSha }}
-        path: src/YarnSpinner.Console/bin/Release/netcoreapp3.1/osx-x64/publish/ysc
+        name: ysc-osx
+        path: ysc-osx.tar
 
+    outputs:
+      builtVersion: ${{ steps.gitversion.outputs.fullSemVer }}-${{ steps.gitversion.outputs.shortSha }}
+
+  release:
+    needs: build
+    steps:
+    - uses: actions/download-artifact@v2
+      name: Download artifacts
+
+    - name: Extract release notes
+        id: extract-release-notes
+        uses: ffurrer2/extract-release-notes@v1
+    - name: Read release notes preface
+      id: release_preface
+      uses: bluwy/substitute-string-action@v1
+      with:
+        _input-file: .github/RELEASE_TEMPLATE.md
+        _format-key: '{key}'
+        RELEASE_TAG: ${{ github.ref_name }}
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: ${{ github.ref }}
+        draft: true
+        prerelease: true
+        body: |
+          ${{ steps.release_preface.outputs.result }}
+          ${{ steps.extract-release-notes.outputs.release_notes }}
+
+    - name: Package Windows build
+      run: |
+        zip --junk-paths ysc-win.zip ysc-win/ysc-win.exe
+
+    - name: Upload Windows Build
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        asset_path: ./ysc-win/ysc-win.zip
+        asset_name: ysc-win-${{ needs.build.outputs.builtVersion }}.zip
+        asset_content_type: application/zip
+    
+    - name: Package macOS build
+      run: |
+        gzip ysc-osx/ysc-osx.exe
+
+    - name: Upload macOS Build
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        asset_path: ./ysc-osx/ysc-osx.tar.gz
+        asset_name: ysc-osx-${{ needs.build.outputs.builtVersion }}.tar.gz
+        asset_content_type: application/gzip
