--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,13 +77,16 @@ jobs:
 
   release:
     needs: build
+    runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/download-artifact@v2
       name: Download artifacts
 
     - name: Extract release notes
-        id: extract-release-notes
-        uses: ffurrer2/extract-release-notes@v1
+      id: extract-release-notes
+      uses: ffurrer2/extract-release-notes@v1
+
     - name: Read release notes preface
       id: release_preface
       uses: bluwy/substitute-string-action@v1
