--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Package for macOS
       run: |
         dotnet publish -r osx-x64 -c Release --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=True
-        tar -cvf ysc-osx.tar --directory /src/YarnSpinner.Console/bin/Release/netcoreapp3.1/osx-x64/publish/ ysc
+        tar -cvf ysc-osx.tar --directory src/YarnSpinner.Console/bin/Release/netcoreapp3.1/osx-x64/publish/ ysc
       
     - uses: actions/upload-artifact@v2
       name: Upload macOS build
