--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,12 +65,23 @@ jobs:
       run: |
         dotnet publish -r osx-x64 -c Release --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=True
         tar -cvf ysc-osx.tar --directory=src/YarnSpinner.Console/bin/Release/netcoreapp6.0/osx-x64/publish/ .
-      
+    
     - uses: actions/upload-artifact@v2
       name: Upload macOS build
       with:
         name: ysc-osx
         path: ysc-osx.tar
+
+    - name: Package for Linux
+      run: |
+        dotnet publish -r linux-x64 -c Release --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=True
+        tar -cvf ysc-linux.tar --directory=src/YarnSpinner.Console/bin/Release/netcoreapp6.0/linux-x64/publish/ .
+  
+    - uses: actions/upload-artifact@v2
+      name: Upload Linux build
+      with:
+        name: ysc-linux
+        path: ysc-linux.tar
 
     outputs:
       builtVersion: ${{ steps.gitversion.outputs.fullSemVer }}-${{ steps.gitversion.outputs.shortSha }}
