--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -149,3 +149,17 @@ jobs:
         asset_path: ./ysc-osx/ysc-osx.tar.gz
         asset_name: ysc-osx-${{ needs.build.outputs.builtVersion }}.tar.gz
         asset_content_type: application/gzip
+
+    - name: Package Linux build
+      run: |
+        gzip ysc-linux/ysc-linux.tar
+
+    - name: Upload Linux Build
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        asset_path: ./ysc-linux/ysc-linux.tar.gz
+        asset_name: ysc-linux-${{ needs.build.outputs.builtVersion }}.tar.gz
+        asset_content_type: application/gzip
