--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,7 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignorable files
 *.nuget.props
 *.nuget.targets
+nupkg/
 
 # Microsoft Azure Build Output
 csx/
