Allow packing ysc as a dotnet tool

--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -7,7 +7,9 @@
     <UseAppHost>true</UseAppHost>
     <PublishSelfContained>true</PublishSelfContained>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <YarnSpinnerDevelopmentPath>../../../../YarnSpinner</YarnSpinnerDevelopmentPath>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>ysc</ToolCommandName>
+    <PackageOutputPath>../../nupkg</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
