--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -10,6 +10,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>ysc</ToolCommandName>
     <PackageOutputPath>../../nupkg</PackageOutputPath>
+    <!-- <YarnSpinnerDevelopmentPath>../../../YarnSpinner</YarnSpinnerDevelopmentPath> -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,10 +25,10 @@
 
   <!-- If Yarn Spinner doesn't exist at YarnSpinnerDevelopmentPath, then pull
     the most recent version from NuGet. -->
-  <ItemGroup Condition="!Exists('$(YarnSpinnerDevelopmentPath)')">
-    <PackageReference Include="YarnSpinner" Version="2.5.0" />
-    <PackageReference Include="YarnSpinner.Compiler" Version="2.5.0" />
-  </ItemGroup>
+    <ItemGroup Condition="!Exists('$(YarnSpinnerDevelopmentPath)')">
+        <PackageReference Include="YarnSpinner" Version="3.0.0-beta.1" />
+        <PackageReference Include="YarnSpinner.Compiler" Version="3.0.0-beta.1" />
+    </ItemGroup>
 
     <!-- If Yarn Spinner DOES exist at YarnSpinnerDevelopmentPath, use that. -->
     <ItemGroup Condition="Exists('$(YarnSpinnerDevelopmentPath)')">
