Update for Yarn Spinner v3.0.0

--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -26,8 +26,8 @@
   <!-- If Yarn Spinner doesn't exist at YarnSpinnerDevelopmentPath, then pull
     the most recent version from NuGet. -->
   <ItemGroup Condition="!Exists('$(YarnSpinnerDevelopmentPath)')">
-    <PackageReference Include="YarnSpinner" Version="3.0.0-beta2" />
-    <PackageReference Include="YarnSpinner.Compiler" Version="3.0.0-beta2" />
+    <PackageReference Include="YarnSpinner" Version="3.0.0" />
+    <PackageReference Include="YarnSpinner.Compiler" Version="3.0.0" />
   </ItemGroup>
 
   <!-- If Yarn Spinner DOES exist at YarnSpinnerDevelopmentPath, use that. -->
