--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp6.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>YarnSpinnerConsole</RootNamespace>
     <UseAppHost>true</UseAppHost>
     <PublishSelfContained>true</PublishSelfContained>
