--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -27,7 +27,7 @@ This package provides the command-line tool 'ysc', which can compile and work wi
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.95.4" />
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20253.1" />
+    <PackageReference Include="System.CommandLine" Version="2.0.2" />
     <PackageReference Include="CsvHelper" Version="12.2.2" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.4.1" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.11.0" />
